# petrosa-binance-data-extractor

./: .bandit  .black  .codecov.yml  .coveragerc  .cursor  .cursorrules  .env.example  .flake8  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  COMMIT_MESSAGE_ISSUE_150.txt  COMPREHENSIVE_MERGE_READINESS_REPORT.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  DEPLOYMENT_SETUP_SUMMARY.md  Dockerfile  FINAL_MERGE_READINESS_STATUS.md  Makefile  OTLP_LOG_EXPORT_SUCCESS.md  README.md  SETUP_DOCKER_SECRETS.md  constants.py  debug-api-test.yaml  otel_init.py  pipeline_test_report_1751410812.json  pr_body.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-dev.txt.backup2  requirements.txt  ruff.toml  run_local_pipeline.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
adapters/: data_manager_adapter.py
api/: __init__.py  main.py
clients/: data_manager_client.py
config/: __init__.py  symbols.py
db/: __init__.py  base_adapter.py  mongodb_adapter.py  mysql_adapter.py
docs/: CENTRALIZED_CONFIGURATION_CORRECTION.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CI_CD_GAP_FILLER_UPDATE.md  CI_CD_PIPELINE.md  CI_CD_PIPELINE_RESULTS.md  CI_CD_QUICK_REFERENCE.md  COVERAGE_IMPROVEMENT_TASKS.md  CURSOR_COMMANDS.md  CURSOR_RULES_REFERENCE.md  DATABASE_CONNECTION_AUDIT_IMPLEMENTATION_SUMMARY.md  DATA_EXTRACTOR_ISSUE_RESOLUTION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DOCKERHUB_SETUP.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXTRACTOR_CONFIG_FIX_SUMMARY.md  INDEX.md  ISSUE_150_FIX_SUMMARY.md  KUBERNETES_ISSUES_INVESTIGATION_AND_FIXES.md  LOCAL_DEPLOY.md  MANUAL_DEPLOYMENT_GUIDE.md  NAMESPACE_UPDATE.md  NATS_KUBERNETES_BEST_PRACTICES.md  NATS_KUBERNETES_SERVICE_CONFIGURATION_UPDATE.md  NATS_MESSAGING.md  NETWORK_POLICY_FIX.md  OPENTELEMETRY_DOUBLE_INITIALIZATION_FIX.md  OPENTELEMETRY_ENDPOINT_FIX.md  OPENTELEMETRY_INSTRUMENTATION_UPDATE.md  OPERATIONS_GUIDE.md  OTEL_INSTALLATION_GUIDE.md  OTEL_MONGODB_FIX.md  PRODUCTION_READINESS.md  PRODUCTION_SUMMARY.md  PROMPT_TEMPLATE.md  QUICK_REFERENCE.md  REPOSITORY_SETUP_GUIDE.md  SERVICE_SUMMARY.md  SOCKET_CLIENT_NATS_CONNECTION_FIX.md  (+3 more)
evaluators/: __init__.py  health_evaluator.py
fetchers/: __init__.py  client.py  funding.py  klines.py  klines_data_manager.py  trades.py
jobs/: __init__.py  extract_funding.py  extract_klines.py  extract_klines_data_manager.py  extract_klines_gap_filler.py  extract_klines_mongodb.py  extract_klines_production.py  extract_trades.py
k8s/: api-deployment.yaml  api-rbac.yaml  api-service.yaml  common-configmap.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  job.yaml  klines-all-timeframes-cronjobs.yaml  klines-data-manager-production.yaml  klines-gap-filler-cronjob.yaml  klines-mongodb-production.yaml  klines-production-cronjobs.yaml  namespace.yaml  network-policy-cronjobs.yaml  network-policy-fix.yaml  network-policy-gap-filler.yaml  observability-fix.yaml  otel-config.yaml  service.yaml
models/: __init__.py  base.py  funding_rate.py  kline.py  metrics.py  trade.py
scripts/: README.md  add_nats_prefixes.py  auto_context.py  check_binance_testnet.py  create-release.sh  cursor_helper.sh  deploy-local.sh  (+26 more)
(+94 files in other folders)
